--- a/package.json
+++ b/package.json
@@ -6,39 +6,39 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "postinstall": "rndebugger-open",
-    "react-devtools": "react-devtools"
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
-    "expo": "~48.0.15",
+    "expo": "~47.0.12",
     "expo-app-loading": "^2.1.1",
-    "expo-camera": "~13.2.1",
-    "expo-font": "^11.1.1",
-    "expo-location": "~15.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-permissions": "~14.1.1",
+    "expo-camera": "~13.1.0",
+    "expo-font": "~11.0.1",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "~15.0.0",
+    "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react": "18.1.0",
+    "react-native": "0.70.8",
     "react-native-firebase": "^5.6.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.7",
-    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0"
   },
+  "overrides": {
+    "react-devtools-core": "~4.25.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-devtools": "^4.27.8",
-    "react-native-debugger-open": "^0.3.25"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
